# ChangeLog for dev-ruby/rails-dev-boost
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Dec 2011; Hans de Graaff <graaff@gentoo.org>
  -rails-dev-boost-0.1.1.ebuild:
  Remove old version that does not work with Rails 3.

*rails-dev-boost-0.1.1.20110823 (10 Oct 2011)

  10 Oct 2011; Hans de Graaff <graaff@gentoo.org>
  +rails-dev-boost-0.1.1.20110823.ebuild:
  Add latest git version that works also with Rails 3.

*rails-dev-boost-0.1.1 (27 Sep 2011)

  27 Sep 2011; Hans de Graaff <graaff@gentoo.org>
  +rails-dev-boost-0.1.1.ebuild, +metadata.xml:
  Initial import.
