@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST rails-dev-boost-0.1.1.20110823.tgz 15328 RMD160 9fe39c3e25a9ecae740e3550d79cacb823578e67 SHA1 5d9b0057a277dce1dd92a6ae56be4af374cf4b9f SHA256 6c18c52222030f1faae39c1feae460f0eab67fe2e2754d6156b41c17a6a36518
+DIST rails-dev-boost-0.1.1.20111105.tgz 16696 RMD160 5fd8cee4eb23e69d18763805b0bf72a2e29eacf5 SHA1 2aa16438e57aee897372b6c56eb827977bc034c2 SHA256 a234feba4fa8030ee050541efed83e4f81e5de5d36583b0aeefaf205f5b9b8b3
 EBUILD rails-dev-boost-0.1.1.20110823.ebuild 609 RMD160 03bfaa0a05d1d69fc353ada46295469993bd81ce SHA1 dc0dbebf287439b9fa0e04f40887cf758d3dc452 SHA256 2692cf8f49fbe92cb6b58d647b71ed27ecd945e376b0c78f6b34b371ea58822f
-MISC ChangeLog 613 RMD160 0d7c8a3b433eafffd9ab8dbe39fc64cc6d530d94 SHA1 d3a31bb965ee821f07a99d9ce27c860cb598c075 SHA256 8ed90229af53a95dc9757fce79a4776ed95200b5d678547819bdc516455f04a1
+EBUILD rails-dev-boost-0.1.1.20111105.ebuild 609 RMD160 cef0a7d084bdbe672abb51dbb60eb6653ba378e6 SHA1 3bb6822bea66b5790a33370926982bbad4ec5f1e SHA256 74082cbf7e5523116cd1fab206cea58c7e2134a4792b3f207c39b1084c0c3849
+MISC ChangeLog 769 RMD160 113c721f64cafedf73e8214d72ed6174c4cc2c29 SHA1 e537b7f29c4e21dc7172ed76f081273e6c61beac SHA256 053c85d3cae141e0c94bfc92fbae0c411022c7bed2df3c235b31cf46a0542ef2
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7fgI8ACgkQiIP6VqMIqNciDAD6A2QyyPj+3/w5UpESb8jV/aFy
-TGJdQRFy2axU0fzMVi4A/A2zB9dkRZywjZBX+a3OLLE/nZJPdkLbj3rQVzKXgy0L
-=Q5Xh
+iF4EAREIAAYFAk7h6FUACgkQiIP6VqMIqNcEDgD/dGzd/6erQk+YXxJcLtdx/OmO
+q3OG8FBCMVzd5twNJpkA/1M0ymyh8lm3MctAt9voDREODC3tPAr+UIkdovggK9/b
+=fRBD
 -----END PGP SIGNATURE-----
