@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*rails-dev-boost-0.1.1.20111105 (09 Dec 2011)
+
+  09 Dec 2011; Hans de Graaff <graaff@gentoo.org>
+  +rails-dev-boost-0.1.1.20111105.ebuild:
+  Version bump.
+
   07 Dec 2011; Hans de Graaff <graaff@gentoo.org>
   -rails-dev-boost-0.1.1.ebuild:
   Remove old version that does not work with Rails 3.
